# phylourny

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  makefile
.circleci/: config.yml
bench/: CMakeLists.txt
bench/src/: CMakeLists.txt  tournament.cpp
docs/: instructions-for-alexis.md  instructions-for-use.md  readme.md
docs/UEFA/: formatted.json  produce-win-csv.py
examples/: match-history-example.csv  odds-example.csv  win-probs-example.csv
experiments/ncaa-2021/: matches.csv  teams.ini
experiments/uefa-2020/: matches.ini  reduced-matches.csv  win-matrix.csv
experiments/uefa-2020/prediction-results/: euro-match-history.csv  euro.probs8.csv  euro2020_roundof8.ini
experiments/uefa-2020/src/: main.py
experiments/uefa2020/: matches.ini
experiments/uefa2020/prediction-results/: euro2020.ini
experiments/uefa2020/src/: main.py
experiments/uefaw-2022/: matches.ini  teams.ini
lib/: CMakeLists.txt
src/: CMakeLists.txt  cli.cpp  cli.hpp  dataset.cpp  dataset.hpp  debug.h  factorial.hpp  main.cpp  match.cpp  match.hpp  mcmc.cpp  mcmc.hpp  model.cpp  model.hpp  program_options.cpp  program_options.hpp  results.cpp  results.hpp  sampler.cpp  sampler.hpp  simulation_node.cpp  simulation_node.hpp  single_node.cpp  single_node.hpp  summary.cpp  summary.hpp  tournament.cpp  tournament.hpp  tournament_factory.cpp  tournament_factory.hpp  tournament_node.cpp  tournament_node.hpp  util.cpp  util.hpp
test/: CMakeLists.txt
test/src/: CMakeLists.txt  dataset.cpp  main.cpp  model.cpp  sampler.cpp  simulation.cpp  single.cpp  tournament.cpp  util.cpp
util/: filter.py  plot.py
